bootstraped/ukrse.css
.container-ukrse {
  max-width: 900px !important;
}

.navbar-ukrse {
  background-color: #97316e;
  color:#ffffff;
  border-radius:0;
}

.navbar-ukrse .navbar-nav > li > a {
  color: #ffffff;
}

.navbar-ukrse .navbar-nav > .active > a, .navbar-nav > .active > a:hover, .navbar-nav > .active > a:focus {
  color: #ffffff;
  background-color:transparent;
}

.navbar-ukrse .navbar-nav > li > a:hover, .nav > li > a:focus {
  text-decoration: none;
  background-color: #A7417e;
}

.navbar-ukrse .navbar-brand {
  color: #ffffff;
}

.navbar-ukrse .navbar-toggle {
  background-color: #eeeeee;
}

.navbar-ukrse .icon-bar {
  background-color: #97316e;
}

a, a:hover, a:focus, a:active {
  color: #97316e;
  text-decoration: none;
}

.h-ukrse {
  color: #97316e;
}

.code-ukrse {
  white-space: normal;
}

.col-ukrse {
  padding-bottom: 20px;
  padding-top: 20px;
}

.spacer50-ukrse {
  height: 50px;
  width: 100%;
  display: block;
}

.spacer1000-ukrse {
  height: 1000px;
  width: 100%;
  display: block;
}

